--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "finch",
-  "version": "1.1.0",
-  "description": "The https://meetfinch.com client API",
+  "name": "finch-core",
+  "version": "0.0.0",
+  "description": "The https://meetfinch.com core API",
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
