--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "asn1": "0.2.1",
-    "colors": "0.6.2",
+    "colors": "^1.0.3",
     "mime": "1.2.11",
     "minimist": "0.0.10",
     "mute-stream": "0.0.4",
-    "node-static": "0.7.3",
+    "node-static": "^0.7.6",
     "optimist": "0.6.1",
-    "read": "1.0.5",
+    "read": "^1.0.5",
     "ssh2": "makeusabrew/ssh2",
     "streamsearch": "0.1.2",
     "wordwrap": "0.0.2"
