--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "debug": "^2.1.3",
     "node-static": "^0.7.6",
-    "ssh2": "0.4.8"
+    "ssh2": "^0.4.12"
   },
   "devDependencies": {
     "chai": "^1.9.1",
