--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "debug": "^2.1.3",
     "node-static": "^0.7.6",
+    "socket.io-client": "^1.4.5",
+    "socket.io-stream": "^0.9.0",
     "ssh2": "^0.4.12"
   },
   "devDependencies": {
