--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "debug": "^2.1.3",
+    "macaddress": "^0.2.8",
     "node-static": "^0.7.6",
     "ssh2": "^0.4.12"
   },
