--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node-static": "^0.7.6",
     "socket.io-client": "^1.4.5",
     "socket.io-stream": "^0.9.0",
-    "ssh2": "^0.4.12"
+    "ssh2": "0.4.12"
   },
   "devDependencies": {
     "chai": "^1.9.1",
